--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^6.1.0",
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.7",
+    "@fortawesome/free-brands-svg-icons": "^5.4.2",
+    "@fortawesome/free-regular-svg-icons": "^5.4.2",
     "@fortawesome/free-solid-svg-icons": "^5.4.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
