--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
+    "@angular/fire": "^5.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
     "@angular/platform-browser": "^6.1.0",
@@ -27,6 +28,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.4.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "firebase": "^5.5.8",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
