--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "firebase": "^5.5.8",
+    "ngx-image-cropper": "1.2.2",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
