--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.4.2",
     "@fortawesome/free-regular-svg-icons": "^5.4.2",
     "@fortawesome/free-solid-svg-icons": "^5.4.2",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "firebase": "^5.5.8",
