--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "firebase": "^5.5.8",
+    "ng2-bootstrap-modal": "1.0.1",
     "ngx-image-cropper": "1.2.2",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
